ajusta pra celular

--- a/index.html
+++ b/index.html
@@ -7,81 +7,102 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <!-- Tela de Login -->
+    <div id="login-screen">
         <h1>Controle Financeiro</h1>
-    </header>
+        <div class="card">
+            <h2>Login</h2>
+            <form onsubmit="Login.submit(event)">
+                <div class="input-group">
+                    <label class="sr-only" for="username">Usuário</label>
+                    <input type="text" id="username" placeholder="Digite seu nome de usuário" required>
+                </div>
+                <div class="input-group">
+                    <button type="submit">Entrar</button>
+                </div>
+            </form>
+        </div>
+    </div>
 
-    <main class="container">
-        <section id="filters">
-            <label class="sr-only" for="monthSelect">Filtrar por mês</label>
-            <select id="monthSelect" onchange="App.reload()">
-                <option value="all">Todos os meses</option>
-            </select>
-            <label class="sr-only" for="dateFilter">Filtrar por data</label>
-            <input type="date" id="dateFilter" onchange="App.reload()" placeholder="Data específica">
-        </section>
+    <!-- Aplicação Principal (inicialmente escondida) -->
+    <div id="app" class="hidden">
+        <header>
+            <a href="#" onclick="Login.logout()" class="button logout">Sair</a>
+            <h1>Controle Financeiro</h1>
+        </header>
 
-        <section id="balance">
-            <div class="card">
-                <h3>Entradas</h3>
-                <p id="incomeDisplay">R$ 0,00</p>
-            </div>
-            <div class="card">
-                <h3>Saídas</h3>
-                <p id="expenseDisplay">R$ 0,00</p>
-            </div>
-            <div class="card total">
-                <h3>Total</h3>
-                <p id="totalDisplay">R$ 0,00</p>
-            </div>
-        </section>
+        <main class="container">
+            <section id="filters">
+                <label class="sr-only" for="monthSelect">Filtrar por mês</label>
+                <select id="monthSelect" onchange="App.reload()">
+                    <option value="all">Todos os meses</option>
+                </select>
+                <label class="sr-only" for="dateFilter">Filtrar por data</label>
+                <input type="date" id="dateFilter" onchange="App.reload()" placeholder="Data específica">
+            </section>
 
-        <section id="transaction">
-            <a href="#" onclick="Modal.open()" class="button new">+ Nova Transação</a>
-            
-            <table id="data-table">
-                <thead>
-                    <tr>
-                        <th>Descrição</th>
-                        <th>Valor</th>
-                        <th>Data</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- As transações serão inseridas aqui pelo JavaScript -->
-                </tbody>
-            </table>
-        </section>
-    </main>
+            <section id="balance">
+                <div class="card">
+                    <h3>Entradas</h3>
+                    <p id="incomeDisplay">R$ 0,00</p>
+                </div>
+                <div class="card">
+                    <h3>Saídas</h3>
+                    <p id="expenseDisplay">R$ 0,00</p>
+                </div>
+                <div class="card total">
+                    <h3>Total</h3>
+                    <p id="totalDisplay">R$ 0,00</p>
+                </div>
+            </section>
 
-    <div class="modal-overlay">
-        <div class="modal">
-            <div id="form">
-                <h2>Nova Transação</h2>
-                <form action="" onsubmit="Form.submit(event)">
-                    <div class="input-group">
-                        <label class="sr-only" for="description">Descrição</label>
-                        <input type="text" id="description" name="description" placeholder="Descrição" />
-                    </div>
-                    <div class="input-group">
-                        <label class="sr-only" for="amount">Valor</label>
-                        <input type="number" step="0.01" id="amount" name="amount" placeholder="0,00" />
-                        <small class="help">Use o sinal - (negativo) para despesas e , (vírgula) para casas decimais</small>
-                    </div>
-                    <div class="input-group">
-                        <label class="sr-only" for="date">Data</label>
-                        <input type="date" id="date" name="date" />
-                    </div>
-                    <div class="input-group">
-                        <label class="sr-only" for="time">Hora</label>
-                        <input type="time" id="time" name="time" />
-                    </div>
-                    <div class="input-group actions">
-                        <a href="#" onclick="Modal.close()" class="button cancel">Cancelar</a>
-                        <button>Salvar</button>
-                    </div>
-                </form>
+            <section id="transaction">
+                <a href="#" onclick="Modal.open()" class="button new">+ Nova Transação</a>
+                
+                <table id="data-table">
+                    <thead>
+                        <tr>
+                            <th>Descrição</th>
+                            <th>Valor</th>
+                            <th>Data</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- As transações serão inseridas aqui pelo JavaScript -->
+                    </tbody>
+                </table>
+            </section>
+        </main>
+
+        <div class="modal-overlay">
+            <div class="modal">
+                <div id="form">
+                    <h2>Nova Transação</h2>
+                    <form action="" onsubmit="Form.submit(event)">
+                        <div class="input-group">
+                            <label class="sr-only" for="description">Descrição</label>
+                            <input type="text" id="description" name="description" placeholder="Descrição" />
+                        </div>
+                        <div class="input-group">
+                            <label class="sr-only" for="amount">Valor</label>
+                            <input type="number" step="0.01" id="amount" name="amount" placeholder="0,00" />
+                            <small class="help">Use o sinal - (negativo) para despesas e , (vírgula) para casas decimais</small>
+                        </div>
+                        <div class="input-group">
+                            <label class="sr-only" for="date">Data</label>
+                            <input type="date" id="date" name="date" />
+                        </div>
+                        <div class="input-group">
+                            <label class="sr-only" for="time">Hora</label>
+                            <input type="time" id="time" name="time" />
+                        </div>
+                        <div class="input-group actions">
+                            <a href="#" onclick="Modal.close()" class="button cancel">Cancelar</a>
+                            <button>Salvar</button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
