ajusta cores fontes

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 <select id="monthSelect" onchange="App.reload()">
                     <option value="all">Todos os meses</option>
                 </select>
-                <label class="sr-only" for="dateFilter">Filtrar por data</label>
-                <input type="date" id="dateFilter" onchange="App.reload()" placeholder="Data específica">
+                <label class="sr-only" for="dateFilter">Dia</label>
+                <input type="date" id="dateFilter" onchange="App.reload()" placeholder="Dia">
             </section>
 
             <section id="balance">
